# rentals_dashboard

Rental_Analysis_dashboard/: .gitignore  README.md  dashboard.py  pyproject.toml  run.sh  run_pipeline.py
Rental_Analysis_dashboard/app/: finance.py  init_db.py  main.py  parser.py  processor.py  schema.py  ui.py  workbook.py
Rental_Analysis_dashboard/data/: Rental_Portfolio.csv  historical_seed_june_2025.json  statement_history_through_2026_06.json
Rental_Analysis_dashboard/scripts/: build_statement_history_seed.py
Rental_Analysis_dashboard/tests/: conftest.py  test_finance.py  test_parser.py  test_processor.py  test_workbook.py
