[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rental-portfolio-dashboard"
version = "1.0.0"
description = "Private, workbook-backed rental investment analytics dashboard"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "pandas>=2.1",
    "pdfplumber>=0.11",
    "plotly>=5.18",
    "streamlit>=1.35",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools.packages.find]
include = ["app*"]
